--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/auth": "^19.2.2",
+    "@react-native-firebase/database": "^19.2.2",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "d3-shape": "^3.2.0",
+    "eas-cli": "^9.0.2",
     "exceljs": "^4.4.0",
     "expo": "~50.0.14",
+    "expo-device": "~5.9.4",
     "expo-linear-gradient": "^13.0.2",
+    "expo-notifications": "~0.27.7",
     "expo-print": "~12.8.1",
     "expo-sharing": "~11.10.0",
     "expo-status-bar": "~1.11.1",
@@ -26,9 +33,12 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gifted-spinner": "^0.1.0",
+    "react-native-notifications": "^5.1.0",
     "react-native-paper": "^5.12.3",
+    "react-native-pdf-lib": "^1.0.0",
     "react-native-reanimated": "^3.11.0",
     "react-native-redash": "^18.1.3",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.2.0",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-web": "~0.19.6",
